--- a/style.css
+++ b/style.css
@@ -2,8 +2,79 @@
 
 @import url('https://fonts.googleapis.com/css?family=Lato&display=swap');
 
+/* Reset */
+
+* {
+    box-sizing: border-box;
+}
+
 /* Application Styles */
 
 body {
+    align-items: center;
+    background-image: URL('./img/countdown.jpg');
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    color: #FFFFFF;
+    display: flex;
+    flex-direction: column;
     font-family: 'Lato',sans-serif;
+    height: 100vh;
+    justify-content: center;
+    margin: 0;
+    overflow: hidden;
+    text-align: center;
+}
+
+body::after {
+    background-color: rgba(0,0,0,0.5);
+    content: '';
+    height: 100%;
+    left: 0;
+    position: absolute;
+    top: 0;
+    width: 100%;
+}
+
+body * {
+    z-index: 1;
+}
+
+h1 {
+    font-size: 60px;
+    margin: 80px 0 40px;
+}
+
+.countdown {
+    display: flex;
+    transform: scale(2);
+}
+
+.time {
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin: 15px;
+}
+
+.time h2 {
+    margin: 0 0 5px;
+}
+
+@media(max-width: 500px) {
+    h1 {
+        font-size: 45px;
+    }
+    .time {
+        margin: 5px;
+    }
+    .time h2 {
+        font-size: 12px;
+        margin: 0;
+    }
+    .time small {
+        font-size: 10px;
+    }
 }
