--- a/style.css
+++ b/style.css
@@ -46,8 +46,18 @@ h1 {
     margin: 80px 0 40px;
 }
 
+.year {
+    bottom: 20px;
+    font-size: 200px;
+    left: 50%;
+    opacity: 0.3;
+    position: absolute;
+    transform: translateX(-50%);
+    z-index: -1;
+}
+
 .countdown {
-    display: flex;
+    display: none;
     transform: scale(2);
 }
 
